# path_planing

./: LICENSE  README.md
AStar/: AStar.cpp  astar_sdl
Algorithms/AStar/: AStar.h  README.md  main.cpp
environment/: execute.bash
environment/install/: local_setup.sh  setup.sh
environment/install/custom_messages/share/custom_messages/: package.sh  package.xml
environment/install/robot_kinematic/lib/robot_kinematic/: robot_kinematic
environment/install/robot_kinematic/share/robot_kinematic/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
environment/install/robot_launcher/share/robot_launcher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
environment/install/robot_planner/lib/robot_planner/: robot_planner_node
environment/install/robot_planner/share/robot_planner/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
environment/install/robot_visualizer/lib/robot_visualizer/: robot_visualizer
environment/install/robot_visualizer/share/robot_visualizer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
environment/launcher/: setup.py
environment/src/custom_messages/: CMakeLists.txt
environment/src/robot_kinematic/: CMakeLists.txt
environment/src/robot_kinematic/src/: robot_kinematic.cpp
environment/src/robot_planner/: CMakeLists.txt
environment/src/robot_planner/src/: robot_planner.cpp
environment/src/robot_visualizer/: package.xml  setup.cfg  setup.py
(+40 files in other folders)
